--- a/_posts/2019-08-28-links.md
+++ b/_posts/2019-08-28-links.md
@@ -2,24 +2,7 @@
 title: All Sitemap Links
 author: Me
 date: 2019-08-09 20:55:00 +0800
-categories: [Links, samirpaul.in/posts/complete-computer-science-study-plan-to-become-a-software-engineer/
-, samirpaul.in/posts/computer-networks-notes/
-, samirpaul.in/posts/data-structures-and-algorithms-for-coding-interview/
-, samirpaul.in/posts/system-design-course/
-, samirpaul.in/posts/curated-list-of-project-based-tutorials/
-, samirpaul.in/posts/leetcode-solutions-cheatsheet/
-, samirpaul.in/posts/list-of-python-frameworks-libraries-software-and-resources/
-, samirpaul.in/posts/lists-of-technical-interview-questions/
-, samirpaul.in/posts/online-pdf-compression-tool/
-, samirpaul.in/posts/some-of-my-online-courses-certificates/
-, samirpaul.in/posts/text-file-compressor-de-compressor-web-app/
-, samirpaul.in/posts/open-external-links-in-a-new-window-using-javascript/
-, samirpaul.in/about/
-, samirpaul.in/posts/
-, samirpaul.in/categories/
-, samirpaul.in/tags/
-, samirpaul.in/
-]
+categories: [Links, samirpaul1.github.io]
 
 tags: [ Links, samirpaul.in/posts/complete-computer-science-study-plan-to-become-a-software-engineer/
 , samirpaul.in/posts/computer-networks-notes/
